[gd_scene load_steps=9 format=3 uid="uid://cnagm0ae3yv72"]

[ext_resource type="Script" path="res://src/scene/editor/markdown_editor.gd" id="1_747k5"]
[ext_resource type="Script" path="res://src/scene/canvas/doc_canvas.gd" id="2_ppuf1"]
[ext_resource type="Script" path="res://src/scene/editor/debug_editor.gd" id="3_qbf4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5wxq"]
bg_color = Color(0.933594, 0.933594, 0.933594, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tqggp"]

[sub_resource type="Theme" id="Theme_wx15x"]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/decrement_pressed = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/icons/increment_pressed = null
HScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/scroll = SubResource("StyleBoxEmpty_tqggp")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_tqggp")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_tqggp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7m7v"]
content_margin_left = 8.0
content_margin_top = 4.0
bg_color = Color(1, 0.991272, 0.898438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_708mh"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.925781, 0.718125, 0.39418, 1)

[node name="MarkdownEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_747k5")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 25.0
offset_right = -488.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5wxq")

[node name="Control" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_left = 24.0
offset_top = 39.0
offset_right = 1099.0
offset_bottom = 764.0

[node name="DocCanvas" type="Control" parent="Control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ppuf1")
file_path = "D:/直播/抖音短视频的推荐机制（或者说算法）是怎样的？.md"

[node name="ReferenceRect" type="ReferenceRect" parent="Control/DocCanvas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 3.0

[node name="TextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 0
offset_left = -155.0
offset_top = -36.0
offset_right = -147.0
offset_bottom = -9.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_wx15x")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(1, 0.998169, 0.882813, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 0.65098)
theme_override_constants/outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_constants/caret_width = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_a7m7v")
theme_override_styles/focus = SubResource("StyleBoxFlat_708mh")
wrap_mode = 1
autowrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="Debug" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1151.0
offset_top = 37.0
offset_right = 1524.0
offset_bottom = 747.0
script = ExtResource("3_qbf4f")

[node name="VScrollBar" type="VScrollBar" parent="."]
layout_mode = 0
offset_left = 1126.0
offset_top = 15.0
offset_right = 1135.0
offset_bottom = 805.0
step = 50.0
page = 100.0
custom_step = 50.0

[connection signal="clicked_line" from="Control/DocCanvas" to="Debug" method="show_debug"]
[connection signal="scrolling" from="VScrollBar" to="." method="_on_v_scroll_bar_scrolling"]
